Fixed TeamTwo alignment for responsiveness

--- a/styles/_team.scss
+++ b/styles/_team.scss
@@ -45,10 +45,16 @@
 }
 
 
-@media (max-width: 687px) {
-    .teamContainer {
-        imf {
-            margin-bottom: 1rem;
-        }
+@media (max-width: 799px) {
+    .teamTwo {
+        margin-left: 0;
     }
 }
+
+
+
+// @media (max-width: 687px) {
+//     .teamContainer {
+
+//     }
+// }
